--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* More user-friendly error messages in case of incorrect requests (metadata, API key)
+  * fixes among others https://github.com/ManifestoProject/manifestoR/issues/1
+
 1.0-5 (2015-09-14)
 ==================
 
