--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ to Meyer & Miller were wrongly assigned to datapoints!
 * franzmann_kaiser scaling now works also for future versions of haven (> 0.2.0)
 * Fixed that mp_coreversions returned corpus versions instead under certain circumstances
 * mp_cite now not only prints a message but returns a data frame with citations
+* mp_maindataset now takes version also in format "2012a" and not only "MPDS2012a"
 
 1.2 (2016-03-21)
 ================
