Fixes #163: mp_interpolate handles NAs correctly

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 1.2.4 (2017-05-08)
 ==================
+* Bugfix in mp_interpolate when country-timeseries starts with NAs
 * changes in the of dplyr functions to be compatible with dplyr 0.5 and dplyr 0.6
 * Dependency on readxl 1.0.0 for better column type guessing in downloading xls dataset file
 
