--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,14 @@
+1.2.5 (2018-03-XX)
+==================
+* rename of aggregate_cee_codes to recode_cee_codes to be more consistent in function naming
+* new function aggregate_pers_cee_codes which is a wrapper of aggregate_pers using cee_aggregation_relations to aggregate cee categories to the main categories in the main dataset
+
 1.2.4 (2017-05-08)
 ==================
 * Bugfix in mp_maindataset: variable "corpusversion" (exists from dataset version 2016b onwards) should not be set NA
 * Bugfix in mp_interpolate when country-timeseries starts with NAs
 * changes in the of dplyr functions to be compatible with dplyr 0.5 and dplyr 0.6
 * Dependency on readxl 1.0.0 for better column type guessing in downloading xls dataset file
-
 
 1.2.3 (2016-07-22)
 ==================
